--- a/src/Simpit/Simpit.csproj
+++ b/src/Simpit/Simpit.csproj
@@ -12,7 +12,12 @@
         <PackageReference Include="SpaceWarp.PluginInfoProps" Version="1.*" />
         <PackageReference Include="System.ComponentModel.Primitives" Version="4.3.0" />
         <PackageReference Include="System.IO.Ports" Version="7.0.0" />
+        <PackageReference Include="UitkForKsp2" Version="2.4.0"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.5" />
+    </ItemGroup>
+    <ItemGroup Label="Project references">
+        <!-- Add references to any other projects in your solution that you want to use in your mod here -->
+        <ProjectReference Include="..\Simpit.Unity\Simpit.Unity.csproj" Private="false"/>
     </ItemGroup>
 </Project>
 
