--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -51,9 +51,10 @@
             <Description>@(Swinfo -> '%(description)')</Description>
             <RepositoryType>git</RepositoryType>
             <RepositoryUrl>@(Swinfo -> '%(source)')</RepositoryUrl>
-            <BepInExPluginGuid>$(ModId)</BepInExPluginGuid>
-            <BepInExPluginName>$(Product)</BepInExPluginName>
-            <BepInExPluginVersion>$(Version)</BepInExPluginVersion>
+            <SpaceWarpPluginGuid>$(ModId)</SpaceWarpPluginGuid>
+            <SpaceWarpPluginName>$(Product)</SpaceWarpPluginName>
+            <SpaceWarpPluginVersion>$(Version)</SpaceWarpPluginVersion>
         </PropertyGroup>
     </Target>
 </Project>
+
